--- a/src/main/resources/view/AddOrderForm.fxml
+++ b/src/main/resources/view/AddOrderForm.fxml
@@ -12,8 +12,8 @@
 
 <AnchorPane prefHeight="500.0" prefWidth="804.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.OrderFormController">
    <children>
-      <JFXComboBox layoutX="35.0" layoutY="86.0" prefHeight="27.0" prefWidth="144.0" promptText="customer id" />
-      <JFXComboBox layoutX="35.0" layoutY="168.0" prefHeight="27.0" prefWidth="144.0" promptText="Item code" />
+      <JFXComboBox fx:id="cmbCustId" layoutX="35.0" layoutY="86.0" onAction="#cmbCustIdOnAction" prefHeight="27.0" prefWidth="144.0" promptText="customer id" />
+      <JFXComboBox fx:id="cmbItemcode" layoutX="35.0" layoutY="168.0" prefHeight="27.0" prefWidth="144.0" promptText="Item code" />
       <TextField fx:id="txtName" layoutX="214.0" layoutY="87.0" promptText="customer name" />
       <TextField fx:id="txtxAddress" layoutX="413.0" layoutY="87.0" promptText="Address" />
       <TextField fx:id="txtItemDesc" layoutX="226.0" layoutY="169.0" promptText="Description" />
@@ -44,5 +44,6 @@
             <Font name="System Bold" size="13.0" />
          </font>
       </Label>
+      <TextField fx:id="txtSalary" layoutX="593.0" layoutY="87.0" promptText="Salary" />
    </children>
 </AnchorPane>
