--- a/src/main/resources/view/AddOrderForm.fxml
+++ b/src/main/resources/view/AddOrderForm.fxml
@@ -13,7 +13,7 @@
 <AnchorPane prefHeight="500.0" prefWidth="804.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.OrderFormController">
    <children>
       <JFXComboBox fx:id="cmbCustId" layoutX="35.0" layoutY="86.0" onAction="#cmbCustIdOnAction" prefHeight="27.0" prefWidth="144.0" promptText="customer id" />
-      <JFXComboBox fx:id="cmbItemcode" layoutX="35.0" layoutY="168.0" prefHeight="27.0" prefWidth="144.0" promptText="Item code" />
+      <JFXComboBox fx:id="cmbItemcode" layoutX="35.0" layoutY="168.0" onAction="#itemdropOnAction" prefHeight="27.0" prefWidth="144.0" promptText="Item code" />
       <TextField fx:id="txtName" layoutX="214.0" layoutY="87.0" promptText="customer name" />
       <TextField fx:id="txtxAddress" layoutX="413.0" layoutY="87.0" promptText="Address" />
       <TextField fx:id="txtItemDesc" layoutX="226.0" layoutY="169.0" promptText="Description" />
