Moved to packages

--- a/src/main/resources/view/RegisterView.fxml
+++ b/src/main/resources/view/RegisterView.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.RegisterViewController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Auth.RegisterViewController">
    <children>
       <Label alignment="CENTER" layoutX="258.0" layoutY="-1.0" prefHeight="48.0" prefWidth="330.0" text="Register">
          <font>
