--- a/src/main/resources/view/AddOrderForm.fxml
+++ b/src/main/resources/view/AddOrderForm.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="500.0" prefWidth="804.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.OrderFormController">
+<AnchorPane prefHeight="500.0" prefWidth="804.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Order.OrderFormController">
    <children>
       <JFXComboBox fx:id="cmbCustId" layoutX="35.0" layoutY="86.0" onAction="#cmbCustIdOnAction" prefHeight="27.0" prefWidth="144.0" promptText="customer id" />
       <JFXComboBox fx:id="cmbItemcode" layoutX="35.0" layoutY="168.0" onAction="#itemdropOnAction" prefHeight="27.0" prefWidth="144.0" promptText="Item code" />
@@ -44,6 +44,5 @@
       </Label>
       <TextField fx:id="txtSalary" layoutX="593.0" layoutY="87.0" promptText="Salary" />
       <TextField fx:id="txtOrderId" layoutX="531.0" layoutY="15.0" promptText="Enter Order ID" />
-      <JFXButton fx:id="BtnRemoveFromCart" layoutX="515.0" layoutY="208.0" onAction="#BtnActionRemovefromcart" style="-fx-background-color: red;" text="Remove Item" />
    </children>
 </AnchorPane>
