--- a/src/main/resources/view/CustomerView.fxml
+++ b/src/main/resources/view/CustomerView.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.CustomerViewController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Customer.CustomerViewController">
    <children>
       <TextField fx:id="IDtxt" layoutX="35.0" layoutY="66.0" promptText="ID" />
       <TextField fx:id="Nametxt" layoutX="418.0" layoutY="66.0" promptText="Name" />
