--- a/src/main/resources/view/loginView.fxml
+++ b/src/main/resources/view/loginView.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.LoginViewController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Auth.LoginViewController">
    <children>
       <Label alignment="CENTER" layoutX="247.0" layoutY="7.0" prefHeight="74.0" prefWidth="253.0" text="                                  Login">
          <font>
