--- a/src/main/resources/view/AddOrderForm.fxml
+++ b/src/main/resources/view/AddOrderForm.fxml
@@ -44,5 +44,6 @@
       </Label>
       <TextField fx:id="txtSalary" layoutX="593.0" layoutY="87.0" promptText="Salary" />
       <TextField fx:id="txtOrderId" layoutX="531.0" layoutY="15.0" promptText="Enter Order ID" />
+      <JFXButton fx:id="BtnRemove" layoutX="516.0" layoutY="208.0" onAction="#BtnOnActionRemove" style="-fx-background-color: #74b9ff;" text="Remove" />
    </children>
 </AnchorPane>
